--- a/styles/media.css
+++ b/styles/media.css
@@ -84,7 +84,7 @@
         padding: 0 10px;
     }
     .promo{
-        background: url('./image/Background_mobile.png') no-repeat;
+        background: url('../image/Background_mobile.png') no-repeat;
         background-size: 100% 100%;
         height: 100vh;
     }
